--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.5
   sizer: ^2.0.15
   just_audio: ^0.9.29
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
