--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.djapp">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
    <application
         android:label="djapp"
         android:name="${applicationName}"
@@ -30,8 +32,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-     <!--  <meta-data
+       <meta-data
            android:name="com.google.android.gms.ads.APPLICATION_ID"
-           android:value=" ca-app-pub-3940256099942544~3347511713"/>-->
+           android:value="ca-app-pub-3940256099942544~3347511713"/>
     </application>
 </manifest>
