--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   smooth_page_indicator: ^1.0.0+2
   google_mobile_ads: ^2.0.1
+  share_plus: ^4.4.0
 
 
 dev_dependencies:
