--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   google_mobile_ads: ^2.0.1
   share_plus: ^4.4.0
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
